hphp/hack/test/typecheck/strict_switch/just_string.php.exp
File "just_string.php", line 40, characters 11-12:
`switch` statement nonexhaustive; at least the following cases are missing: `default` (Typing[4019])
  File "just_string.php", line 40, characters 11-12:
  only unions and intersections of bool, null and enums can be switched on without a default
File "just_string.php", line 31, characters 10-11:
Case in `switch` must be either an enum constant or a literal expression. (Typing[4020])
File "just_string.php", line 19, characters 10-13:
Redundant `case` statement (Typing[4021])
  File "just_string.php", line 17, characters 10-12:
  `"` already handled here
File "just_string.php", line 53, characters 10-11:
Redundant `case` statement (Typing[4021])
  File "just_string.php", line 49, characters 10-11:
  `` already handled here
File "just_string.php", line 55, characters 10-12:
Redundant `case` statement (Typing[4021])
  File "just_string.php", line 51, characters 10-12:
  `.` already handled here
